Changelog
=========

0.5.1 - 
------------------

- Add (id) column to message table.
  [ggozad]

0.5.0 - 2024-09-04
------------------

- Add support for the command palette. Move most chat-related actions there.
  [ggozad]

0.4.4 - 2024-08-30
------------------

- Restore shortcut for command palette that overrided our choice for adding images.
  [ggozad]

0.4.3 - 2024-08-28
------------------

- Force utf-8 when exporting messages to a file.
  [ggozad]

- Migrate to using uv instead of poetry for packaging/dependency management.
  [ggozad]

0.4.2 - 2024-08-20
------------------

- Remove patch to TextArea & restore tab handling.
  [ggozad]

0.4.1 - 2024-08-20
------------------

- Use 127.0.0.1 as the default host for Ollama.
  [ggozad]

0.4.0 - 2024-08-19
------------------

- Use stored messages and chat API instead of context and generate API.
  [yilmaz08, ggozad]

0.3.1 - 2024-08-14
------------------

- Remove dependency on tree-sitter, tree-sitter-languages since they require pre-compiled wheels.
  [ggozad]

0.3.0 - 2024-08-14
------------------

- Support customizing model parameters.
  [ggozad]

- Cycle saved chats with Ctrl+Tab and Ctrl+Shift+Tab
  [yilmaz08]

0.2.10 - 2024-08-09
------------------- 

- Enter posts while Shift+Enter injects a newline in the multiline-widget.
  [ggozad]

- Minor bug fixes & updates.
  [ggozad]

0.2.9 - 2024-05-03
------------------

- Dependency updates.
  [suhr, ggozad]

0.2.8 - 2024-05-03
------------------

- Do not scroll to the bottom of the chat when the user is reading past messages.
  [lainedfles, ggozad]

- Allow customizing keep-alive parameter.
  [ggozad]

0.2.7 - 2024-04-22
------------------

- Take into account env variables when calling show/list etc. on Ollama.
  [habaneraa]

0.2.6 - 2024-04-20
------------------

- Fix handling of OLLAMA_HOST, OLLAMA_URL, OTERM_VERIFY_SSL env variables.
  [ggozad]

- Fix windows crash when switching chat panes on slow machines.
  [ggozad]

0.2.5 - 2024-04-02